--- a/src/components/headerComponent/headerStyle.css
+++ b/src/components/headerComponent/headerStyle.css
@@ -1,8 +1,6 @@
 .menu {
     background-color: white;
     box-shadow: 0px 2px 24px 0px rgba(0, 0, 0, 0.15);
-    border-radius: 8px;
-    width: 100%;
     height: 80px;
     display: flex;
     justify-content: space-between;
@@ -14,6 +12,7 @@
     display: flex;
     align-items: center;
     height: 100%;
+    padding: 0px 20px;
 }
 
 .menu__list {
