--- a/src/components/extension/extensionStyle.css
+++ b/src/components/extension/extensionStyle.css
@@ -1,7 +1,14 @@
-.card{
-    width: 480px;
+.extensionPage{
     display: flex;
-    border: 2px solid darkorange;
+    justify-content: center;
+}
+
+.card{
+    display: inline-block;
+    border: 2px solid #bdbdbd;
     border-radius: 10px;
-    box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.25);
+    padding: 5px;
+    margin: 20px 20px;
+    box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.15);
+    background-color:#eeeeee;
 }
