--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,3 +1,8 @@
+.siteHeader{
+    position: sticky;
+    top: 0;
+}
+
 .menu {
     background-color: white;
     box-shadow: 0px 2px 24px 0px rgba(0, 0, 0, 0.15);
@@ -18,7 +23,6 @@
     display: none;
     align-items: center;
     height: 100%;
-    padding: 0px 20px;
 }
 
 .menu__list {
