--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,30 +1,36 @@
 .Footer{
-    background-color: black;
+    background-color: #262628;
     display: block;
     justify-content: space-evenly;
-    padding: 20px 0;
 }
 
-.col{
-    width: 350px;
-    height: 300px;
-    border: 1px solid white;
-    border-radius: 5px;
-    padding: 10px;
+.col1{
+    width: 50%;
 }
 
-.title{
+.col2{
+    width: 50%;
+}
+
+.aboutLink{
     color: white;
-    text-align: center;
+    text-decoration: none;
 }
-
-.details{
+.aboutLink:visited{
     color: white;
-    text-align: center;
+}
+.aboutLink:hover{
+    text-decoration: underline;
 }
 
 @media screen and (min-width: 1280px){
     .Footer{
         display: flex;
+        padding: 30px 100px;
+        justify-content: space-evenly;
+    }
+    .col2{
+        width: 50%;
+        text-align: right;
     }
 }
