--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -29,6 +29,7 @@
         display: flex;
         padding: 30px 100px;
         justify-content: space-evenly;
+        margin-top: auto;
     }
     .col2{
         width: 50%;
